<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:alpha="0.9"
        android:src="@drawable/ic_credit_card_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:elevation="16dp"
        android:background="@drawable/corner_radius">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="5dp"
            android:text="Email" />
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="Email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Password"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:background="@drawable/edit_text_border"
            android:inputType="textPassword"
            android:hint="Password"/>
        <TextView
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="15dp"
            android:text="Forgot password?"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/textViewDoSignUp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/blue500"
            android:textStyle="bold"
            android:text="@string/sign_up_navigation_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/gotham_bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:text="or"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="5dp"
                android:src="@drawable/ic_google"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>